build: target Java 17 and remove Java 21-only APIs