@@ -64,10 +64,10 @@ class InventoryIntegrationTest {
         assertEquals(1, loadedArt.size(), "Exactly one art piece should be loaded");
         System.out.println("\t\tPassed: Correct number of art pieces loaded");
 
-        assertEquals("1112223334", loadedArt.getFirst().getArtIdentification(), "Loaded art ID should match");
+        assertEquals("1112223334", loadedArt.get(0).getArtIdentification(), "Loaded art ID should match");
         System.out.println("\t\tPassed: Art ID matches");
 
-        assertEquals("Sunset Print", loadedArt.getFirst().getTitle(), "Loaded title should match");
+        assertEquals("Sunset Print", loadedArt.get(0).getTitle(), "Loaded title should match");
         System.out.println("\t\tPassed: Art title matches");
     }
 
